force-app/main/default/objects/Consult_ARF__c/Consult_ARF__c.object-meta.xml
<CustomObject>
    <label>Consult ARF</label>
    <nameField>
        <displayFormat>CARF-{00000}</displayFormat>
        <label>Consult ARF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consult ARFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>