force-app/main/default/objects/Consult_ARF__c/fields/My_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Order</label>
    <referenceTo>portal_my_order__c</referenceTo>
    <relationshipLabel>Consult ARFs</relationshipLabel>
    <relationshipName>Consult_ARFs</relationshipName>
    <type>Lookup</type>
</CustomField>