force-app/main/default/objects/Consult_ARF__c/fields/Notes_for_Consult__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Consult__c</fullName>
    <label>Notes for Consult</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>