force-app/main/default/objects/Consult_ARF__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Consult ARFs</relationshipLabel>
    <relationshipName>Consult_ARFs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>